# parallel-http-client

./: .pre-commit-config.yaml  Makefile  pyproject.toml  ruff-shared.toml  tox.ini
.github/workflows/: ci.yaml  periodic-ci.yaml
scripts/: update-uv-version.sh
src/parallel_http_client/: __init__.py  _cli.py  _client.py
src/pclient/: client.py
tests/: client_test.py  conftest.py  server_test.py
tests/data/: pg11.txt
