[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "pclient"
description = "Parallel HTTP fetcher using byte ranges"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.27",
]
dynamic = ["version"]

[project.scripts]
fetch = "pclient.client:main"

[project.urls]
Source = "https://github.com/lsst-sqre/pclient"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "scriv[toml]",
]

lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff>=0.12",
]
tox = [
    "tox>=4.24",
    "tox-uv>=1.25",
]
typing = [
    "mypy>=1.15",
    "types-PyYAML",
    "types-requests",
]

[tool.black]
line-length = 79

[tool.coverage.run]
parallel = true
branch = true
source = ["mobu"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "deprecated",
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-expr",
    "redundant-self",
    "truthy-iterable",
    "unused-awaitable",
]
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
filterwarnings = [
    # dataclases-avroschema hasn't been fully updated for Python 3.14
    "ignore:.*Core Pydantic V1 functionality.*:UserWarning",
    "ignore:.*'_UnionGenericAlias' is deprecated.*:DeprecationWarning",
    # Bug in Sentry with Python 3.14 and later
    "ignore:.*asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning",
]
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

# Use the generic Ruff configuration in ruff.toml and extend it with only
# project-specific settings.
[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.extend-per-file-ignores]
"src/mobu/services/business/tap.py" = [
    "ASYNC110", # TAP code could be rewritten to poll state differently
]
"src/mobu/services/monkey.py" = [
    "C901",   # we have a lot of business types, thus big conditionals
    "PLR0912",   # we have a lot of business types, thus big conditionals
    "SIM115",   # we do want a NamedTemporaryFile not in a context manager
]
"tests/data/**/*.ipynb" = [
    "T201",     # test notebooks are allowed to use print
]

[tool.ruff.lint.isort]
known-first-party = ["monkeyflocker", "mobu", "tests"]
split-on-trailing-comma = false

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"

[tool.setuptools_scm]
